--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -1,5 +1,5 @@
-$primary-color: #e53637;
-$secondary-color: #0c2b4b;
+$primary-color: #4e54c8;
+$secondary-color: #8f94fb;
 $white-color: #ffffff;
 $heading-color: #111111;
 $para-color: #5C5C5C;
